--- a/CinePicker/Common/Components/FailedLoadingTableViewCell.xib
+++ b/CinePicker/Common/Components/FailedLoadingTableViewCell.xib
@@ -21,7 +21,7 @@
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Couldn't load data..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a8b-x4-YOm">
                             <rect key="frame" x="106.5" y="12" width="162" height="22"/>
                             <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                            <color key="textColor" red="0.52941176469999995" green="0.52941176469999995" blue="0.52941176469999995" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="R3M-rk-HQK">
@@ -31,13 +31,11 @@
                         </button>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jnL-bp-dwb" userLabel="Bottom Bar View">
                             <rect key="frame" x="0.0" y="79.5" width="375" height="0.5"/>
-                            <color key="backgroundColor" red="0.1960784314" green="0.1960784314" blue="0.1960784314" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="0.5" id="WqT-gd-2N2"/>
                             </constraints>
                         </view>
                     </subviews>
-                    <color key="backgroundColor" red="0.078431372550000003" green="0.078431372550000003" blue="0.078431372550000003" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="bottom" secondItem="jnL-bp-dwb" secondAttribute="bottom" id="EuL-kw-ASc"/>
                         <constraint firstItem="R3M-rk-HQK" firstAttribute="top" secondItem="a8b-x4-YOm" secondAttribute="bottom" constant="4" id="TFg-gw-hxt"/>
@@ -61,6 +59,8 @@
             <viewLayoutGuide key="safeArea" id="xRt-4N-T86"/>
             <connections>
                 <outlet property="actionButton" destination="R3M-rk-HQK" id="2ah-KQ-efu"/>
+                <outlet property="bottomBarView" destination="jnL-bp-dwb" id="5ua-vX-b7S"/>
+                <outlet property="contentUIView" destination="ewD-5C-LlC" id="bCE-y0-dy3"/>
                 <outlet property="messageLabel" destination="a8b-x4-YOm" id="urd-zj-YpN"/>
             </connections>
             <point key="canvasLocation" x="168.80000000000001" y="90.854572713643179"/>
