--- a/CinePicker/Common/Components/HeaderTableViewCell.xib
+++ b/CinePicker/Common/Components/HeaderTableViewCell.xib
@@ -27,13 +27,11 @@
                         </button>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gDd-0w-zxx" userLabel="Bottom Bar View">
                             <rect key="frame" x="0.0" y="39.5" width="375" height="0.5"/>
-                            <color key="backgroundColor" red="0.1960784314" green="0.1960784314" blue="0.1960784314" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="0.5" id="lmT-Cu-UmT"/>
                             </constraints>
                         </view>
                     </subviews>
-                    <color key="backgroundColor" red="0.078431372550000003" green="0.078431372550000003" blue="0.078431372550000003" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="bottom" secondItem="gDd-0w-zxx" secondAttribute="bottom" id="R9G-km-ejO"/>
                         <constraint firstItem="iUf-o0-zTd" firstAttribute="centerX" secondItem="Q22-kA-PTR" secondAttribute="centerX" id="cTP-vv-sLh"/>
@@ -54,6 +52,8 @@
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="mbB-05-Eux"/>
             <connections>
+                <outlet property="bottomBarView" destination="gDd-0w-zxx" id="170-h7-Rle"/>
+                <outlet property="contentUIView" destination="Q22-kA-PTR" id="VoG-zM-aQM"/>
                 <outlet property="headerButton" destination="iUf-o0-zTd" id="2Jp-bE-9OW"/>
             </connections>
             <point key="canvasLocation" x="-90.400000000000006" y="234.78260869565219"/>
