--- a/CinePicker/Common/Components/LoadingTableViewCell.xib
+++ b/CinePicker/Common/Components/LoadingTableViewCell.xib
@@ -23,13 +23,11 @@
                         </activityIndicatorView>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="haA-LK-a8l" userLabel="Bottom Bar View">
                             <rect key="frame" x="0.0" y="79.5" width="375" height="0.5"/>
-                            <color key="backgroundColor" red="0.1960784314" green="0.1960784314" blue="0.1960784314" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="0.5" id="DTQ-6g-pcO"/>
                             </constraints>
                         </view>
                     </subviews>
-                    <color key="backgroundColor" red="0.078431372550000003" green="0.078431372550000003" blue="0.078431372550000003" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstItem="ySI-fI-EzP" firstAttribute="centerY" secondItem="iQg-pe-8aZ" secondAttribute="centerY" id="BDU-FB-ebM"/>
                         <constraint firstAttribute="bottom" secondItem="haA-LK-a8l" secondAttribute="bottom" id="WgA-Za-dia"/>
@@ -50,6 +48,8 @@
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="N97-sz-zdy"/>
             <connections>
+                <outlet property="bottomBarView" destination="haA-LK-a8l" id="5UB-Ri-J99"/>
+                <outlet property="contentUIView" destination="iQg-pe-8aZ" id="q1E-IQ-EUT"/>
                 <outlet property="loadingActivityIndicator" destination="ySI-fI-EzP" id="5Ns-bl-16m"/>
             </connections>
             <point key="canvasLocation" x="-280.80000000000001" y="73.763118440779621"/>
